--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div class="ads"></div>
+    <section>section 1</section>
+    <section>section 2</section>
 </body>
 </html>
